--- a/class.html.twig
+++ b/class.html.twig
@@ -30,7 +30,7 @@
                     <ul>
                         {% for method in node.methods %}
                             {% if method.visibility == 'public' %}
-                            <li class="method {{ method.visibility }}">
+                            <li class="method {{ method.visibility }}{{ method.parent.name != node.name ? ' inherited' : '' }}">
                                 <a href="#method_{{ method.name }}" title="{{ method.name }} :: {{ method.summary }}">
                                     <span class="description">{{ method.summary }}</span><pre>{{ method.name }}</pre>
                                 </a>
@@ -43,7 +43,7 @@
                     <ul>
                         {% for method in node.methods %}
                             {% if method.visibility == 'protected' %}
-                                <li class="method {{ method.visibility }}">
+                                <li class="method {{ method.visibility }}{{ method.parent.name != node.name ? ' inherited' : '' }}">
                                     <a href="#method_{{ method.name }}" title="{{ method.name }} :: {{ method.summary }}">
                                         <span class="description">{{ method.summary }}</span><pre>{{ method.name }}</pre>
                                     </a>
@@ -56,7 +56,7 @@
                     <ul>
                         {% for method in node.methods %}
                             {% if method.visibility == 'private' %}
-                                <li class="method {{ method.visibility }}">
+                                <li class="method {{ method.visibility }}{{ method.parent.name != node.name ? ' inherited' : '' }}">
                                     <a href="#method_{{ method.name }}" title="{{ method.name }} :: {{ method.summary }}">
                                         <span class="description">{{ method.summary }}</span><pre>{{ method.name }}</pre>
                                     </a>
@@ -81,13 +81,16 @@
         </div>
 
         <div class="span8">
-            <a id="{{ node.fullyQualifiedStructuralElementName }}"></a>
-            <ul class="breadcrumb">
-                <li><a href="{{ path('index.html') }}"><i class="icon-custom icon-class"></i></a></li>
-                {{ self.buildBreadcrumb(node.namespace) }}
-                <li class="active"><span class="divider">\</span><a href="{{ path(node) }}">{{ node.name }}</a></li>
-            </ul>
             <div class="element class">
+                <h1>{{ node.name }}</h1>
+                <small style="display: block; text-align: right">
+                    {% if node.parentclass %}
+                        Extends {{ node.parentclass|route|join(', ')|raw }}
+                    {% endif %}
+                    {% if node.interfaces.count %}
+                        Implements {{ node.interfaces|route|join(', ')|raw }}
+                    {% endif %}
+                </small>
                 <p class="short_description">{{ node.summary }}</p>
                 <div class="details">
                     <div class="long_description">
@@ -95,100 +98,117 @@
                     </div>
                     <table class="table table-bordered">
                         {% for tagList in node.tags %}
-                        {% for tag in tagList %}
-                        <tr>
-                            <th>{{ tag.name }}</th>
-                            <td>{{ tag.description }}</td>
-                        </tr>
-                        {% endfor %}
+                            {% for tag in tagList %}
+                                <tr>
+                                    <th>
+                                        {{ tag.name }}
+                                        {% if tag.type %}
+                                            {{ tag.type|route|join('|')|raw }}
+                                        {% endif %}
+                                    </th>
+                                    <td>{{ tag.description }}</td>
+                                </tr>
+                            {% endfor %}
                         {% endfor %}
                     </table>
 
                     <h3><i class="icon-custom icon-method"></i> Methods</h3>
                     {% for method in node.methods %}
-                    <a id="method_{{ method.name }}"></a>
-                    <div class="element clickable method {{ method.visibility }} method_{{ method.name }}" data-toggle="collapse" data-target=".method_{{ method.name }} .collapse">
-                        <h2>{{ method.summary ?: method.name }}</h2>
-                        <pre>{{ method.name }}({% for argument in method.arguments %}{{ argument.types ? argument.types|join('|')~' ' }}{{ argument.byReference ? '&' }}{{ argument.name }}{{ argument.default ? ' = '~argument.default }}{% if not loop.last %}, {% endif %}{% endfor %}) {{ method.response.types ? ': '~method.response.types|join('|') }}</pre>
-                        <div class="labels">
-                            {% if method.static %}<span class="label">static</span>{% endif %}
-                            {% if method.final %}<span class="label">final</span>{% endif %}
-                            {% if method.abstract %}<span class="label">abstract</span>{% endif %}
-                            {% if method.tags.api is defined %}<span class="label label-info">api</span>{% endif %}
-                        </div>
-                        <div class="row collapse">
-                            <div class="detail-description">
-                                <div class="long_description">{{ method.description|markdown|raw }}</div>
+                        <a id="method_{{ method.name }}"></a>
+                        <div class="element clickable method {{ method.visibility }} method_{{ method.name }}{{ method.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".method_{{ method.name }} .collapse">
+                            <h2>{{ method.summary ?: method.name }}</h2>
+                            <pre>{{ method.name }}({% for argument in method.arguments %}{{ argument.types ? argument.types|join('|')~' ' }}{{ argument.byReference ? '&' }}{{ argument.name }}{{ argument.default ? ' = '~argument.default }}{% if not loop.last %}, {% endif %}{% endfor %}) {{ method.response.types ? ': '~method.response.types|join('|') }}</pre>
+                            <div class="labels">
+                                {% if method.parent.name != node.name %}<span class="label">inherited</span>{% endif %}
+                                {% if method.static %}<span class="label">static</span>{% endif %}
+                                {% if method.final %}<span class="label">final</span>{% endif %}
+                                {% if method.abstract %}<span class="label">abstract</span>{% endif %}
+                                {% if method.tags.api is defined %}<span class="label label-info">api</span>{% endif %}
+                            </div>
+                            <div class="row collapse">
+                                <div class="detail-description">
+                                    <div class="long_description">{{ method.description|markdown|raw }}</div>
 
-                                <table class="table">
-                                    {% for tagList in method.tags if tagList.0.name not in ['param', 'return', 'api'] %}
-                                        <tr>
-                                            <th>{{ tagList.0.name }}</th>
-                                            <td>
-                                                {% for tag in tagList %}
-                                                    {{ tag.description|markdown|raw }}<br />
-                                                {% endfor %}
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                </table>
+                                    <table class="table">
+                                        {% for tagList in method.tags if tagList.0.name not in ['param', 'return', 'api'] %}
+                                            <tr>
+                                                <th>
+                                                    {{ tagList.0.name }}
+                                                </th>
+                                                <td>
+                                                    {% for tag in tagList %}
+                                                        {{ tag.description|markdown|raw }}<br />
+                                                    {% endfor %}
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                    </table>
 
-                                {% if method.arguments.count > 0 %}
-                                    <h3>Arguments</h3>
-                                    {% for argument in method.arguments %}
-                                    <div class="subelement argument">
-                                        <h4>{{ argument.name }}</h4>
-                                        <code>{{ argument.types|join('|') }}</code><p>{{ argument.description|markdown|raw }}</p>
-                                    </div>
-                                    {% endfor %}
-                                {% endif %}
+                                    {% if method.arguments.count > 0 %}
+                                        <h3>Arguments</h3>
+                                        {% for argument in method.arguments %}
+                                            <div class="subelement argument">
+                                                <h4>{{ argument.name }}</h4>
+                                                <code>{{ argument.types|route|join('|')|raw }}</code><p>{{ argument.description|markdown|raw }}</p>
+                                            </div>
+                                        {% endfor %}
+                                    {% endif %}
 
-                                {% if method.response.types and method.response.types|join() != 'void' %}
-                                <h3>Response</h3>
-                                <code>{{ method.response.types|join('|') }}</code><p>{{ method.response.description|markdown|raw }}</p>
-                                {% endif %}
+                                    {% if method.response.types and method.response.types|join() != 'void' %}
+                                        <h3>Response</h3>
+                                        <code>{{ method.response.types|route|join('|')|raw }}</code><p>{{ method.response.description|markdown|raw }}</p>
+                                    {% endif %}
+                                </div>
                             </div>
                         </div>
-                    </div>
                     {% endfor %}
 
                     {% if node.constants.count > 0 %}
-                    <h3><i class="icon-custom icon-constant"></i> Constants</h3>
-                    {% for constant in node.constants %}
-                    <a id="constant_{{ constant.name }}"> </a>
-                    <div class="element clickable constant  constant_{{ constant.name }}" data-toggle="collapse" data-target=".constant_{{ constant.name }} .collapse">
-                        <h2>{{ constant.summary ?: constant.name }}</h2>
-                        <pre>{{ constant.name }}</pre>
-                        <div class="labels"></div>
-                        <div class="row collapse">
-                            <div class="detail-description">
-                                <div class="long_description">{{ constant.description|markdown|raw }}</div>
+                        <h3><i class="icon-custom icon-constant"></i> Constants</h3>
+                        {% for constant in node.constants %}
+                            <a id="constant_{{ constant.name }}"> </a>
+                            <div class="element clickable constant  constant_{{ constant.name }}{{ constant.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".constant_{{ constant.name }} .collapse">
+                                <h2>{{ constant.summary ?: constant.name }}</h2>
+                                <pre>{{ constant.name }}</pre>
+                                <div class="labels">
+                                    {% if constant.parent.name != node.name %}<span class="label">inherited</span>{% endif %}
+                                </div>
+                                <div class="row collapse">
+                                    <div class="detail-description">
+                                        <div class="long_description">{{ constant.description|markdown|raw }}</div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    {% endfor %}
+                        {% endfor %}
                     {% endif %}
 
                     {% if node.properties.count > 0 %}
-                    <h3><i class="icon-custom icon-property"></i> Properties</h3>
-                    {% for property in node.properties %}
-                    <a id="property_{{ property.name }}"> </a>
-                    <div class="element clickable property {{ property.visibility }} property_{{ property.name }}" data-toggle="collapse" data-target=".property_{{ property.name }} .collapse">
-                        <h2>{{ property.summary ?: property.name }}</h2>
-                        <pre>{{ property.name }}</pre>
-                        <div class="labels">
-                            {% if property.static %}<span class="label">static</span>{% endif %}
-                        </div>
-                        <div class="row collapse">
-                            <div class="detail-description">
-                                <div class="long_description">{{ property.description|markdown|raw }}</div>
+                        <h3><i class="icon-custom icon-property"></i> Properties</h3>
+                        {% for property in node.properties %}
+                            <a id="property_{{ property.name }}"> </a>
+                            <div class="element clickable property {{ property.visibility }} property_{{ property.name }}{{ property.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".property_{{ property.name }} .collapse">
+                                <h2>{{ property.summary ?: property.name }}</h2>
+                                <pre>{{ property.name }}</pre>
+                                <div class="labels">
+                                    {% if property.parent.name != node.name %}<span class="label">inherited</span>{% endif %}
+                                    {% if property.static %}<span class="label">static</span>{% endif %}
+                                </div>
+                                <div class="row collapse">
+                                    <div class="detail-description">
+                                        <div class="long_description">{{ property.description|markdown|raw }}</div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    {% endfor %}
+                        {% endfor %}
                     {% endif %}
                 </div>
             </div>
+            <a id="{{ node.fullyQualifiedStructuralElementName }}"></a>
+            <ul class="breadcrumb">
+                <li><a href="{{ path('index.html') }}"><i class="icon-custom icon-class"></i></a></li>
+                {{ self.buildBreadcrumb(node.namespace) }}
+                <li class="active"><span class="divider">\</span><a href="{{ path(node) }}">{{ node.name }}</a></li>
+            </ul>
         </div>
     </div>
 
