--- a/index.html.twig
+++ b/index.html.twig
@@ -8,22 +8,26 @@
 
         <div class="row">
             <div class="span7">
-                {% if project.namespace.namespaces.count > 0 or not project.index.package %}
+                {% if project.namespace.namespaces.count > 0 or not project.index.packages %}
                     <div class="well">
                         <ul class="nav nav-list">
                             <li class="nav-header">Namespaces</li>
                             <li><a href="{{ path(project.namespace) }}">Global ({{ project.namespace.name }})</a></li>
-                            {% for namespace in project.namespace.namespaces %}
+                            {% for namespace in project.namespace.children %}
                                 <li><a href="{{ path(namespace) }}">{{ namespace.name }}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
                 {% endif %}
 
-                {% if project.index.package %}
+                {% if project.indexes.packages.count %}
                     <div class="well">
                         <ul class="nav nav-list">
                             <li class="nav-header">Packages</li>
+                            <li><a href="{{ path(project.indexes.packages|first) }}">Global ({{ (project.indexes.packages|first).name }})</a></li>
+                            {% for package in (project.indexes.packages|first).children %}
+                            <li><a href="{{ path(package) }}">{{ package.name }}</a></li>
+                            {% endfor %}
                         </ul>
                     </div>
                 {% endif %}
