Insert version number for phpDocumentor/phpDocumentor2#874

--- a/class.html.twig
+++ b/class.html.twig
@@ -106,7 +106,12 @@
                                             {{ tag.type|route|join('|')|raw }}
                                         {% endif %}
                                     </th>
-                                    <td>{{ tag.description }}</td>
+                                    <td>
+                                        {% if (tag.name == "since") %}
+                                            {{ tag.version }}
+                                        {% endif %}
+                                        {{ tag.description|markdown|raw }}
+                                    </td>
                                 </tr>
                             {% endfor %}
                         {% endfor %}
@@ -137,6 +142,9 @@
                                                 </th>
                                                 <td>
                                                     {% for tag in tagList %}
+                                                        {% if (tag.name == "since") %}
+                                                            {{ tag.version }}
+                                                        {% endif %}
                                                         {{ tag.description|markdown|raw }}<br />
                                                     {% endfor %}
                                                 </td>
