--- a/layout.html.twig
+++ b/layout.html.twig
@@ -41,9 +41,9 @@
                             API Documentation <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            {% if (project.namespace.namespaces.count) %}
+                            {% if (project.namespace.children.count > 0) %}
                                 <li><a>Namespaces</a></li>
-                                {% for namespace in project.namespace.namespaces %}
+                                {% for namespace in project.namespace.children %}
                                 <li><a href="{{ path(namespace) }}">{{ namespace.name }}</a></li>
                                 {% endfor %}
                             {% endif %}
