--- a/class.html.twig
+++ b/class.html.twig
@@ -1,26 +1,13 @@
 {% extends 'layout.html.twig' %}
 
+{% import 'base/macros.html.twig' as macros %}
 {% use 'base/class.sidebar.html.twig' %}
 
-{% macro buildBreadcrumb(element) %}
-    {% import _self as self %}
-
-    {% if element.parentNamespace and element.parentNamespace.name != '\\' %}
-        {{ self.buildBreadcrumb(element.parentNamespace) }}
-    {% endif %}
-
-    <li>
-        <span class="divider">\</span><a href="{{ path(element) }}">{{ element.name }}</a>
-    </li>
-{% endmacro %}
-
 {% block title %}
-    {{ project.title }} &raquo; {{ node.FullyQualifiedStructuralElementName }}
+    {{ parent() }} &raquo; {{ node.FullyQualifiedStructuralElementName }}
 {% endblock %}
 
 {% block content %}
-    {% import _self as self %}
-
     <div class="row">
         <div class="span4">
             {{ block('sidebar') }}
@@ -130,6 +117,20 @@
                                 <div class="row collapse">
                                     <div class="detail-description">
                                         <div class="long_description">{{ constant.description|markdown|raw }}</div>
+                                        <table class="table">
+                                            {% for tagList in constant.tags %}
+                                                <tr>
+                                                    <th>
+                                                        {{ tagList.0.name }}
+                                                    </th>
+                                                    <td>
+                                                        {% for tag in tagList %}
+                                                            {{ tag.description|markdown|raw }}
+                                                        {% endfor %}
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                        </table>
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +142,7 @@
                         {% for property in node.properties.merge(node.inheritedProperties) %}
                             <a id="property_{{ property.name }}"> </a>
                             <div class="element clickable property {{ property.visibility }} property_{{ property.name }}{{ property.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".property_{{ property.name }} .collapse">
-                                <h2>{{ property.summary ?: property.name }}</h2>
+                                <h2>{{ property.summary ?: property.var.0.description ?: property.name }}</h2>
                                 <pre>{{ property.name }}</pre>
                                 <div class="labels">
                                     {% if property.parent.name != node.name %}<span class="label">inherited</span>{% endif %}
@@ -150,6 +151,21 @@
                                 <div class="row collapse">
                                     <div class="detail-description">
                                         <div class="long_description">{{ property.description|markdown|raw }}</div>
+
+                                        <table class="table">
+                                            {% for tagList in property.tags %}
+                                                <tr>
+                                                    <th>
+                                                        {{ tagList.0.name }}
+                                                    </th>
+                                                    <td>
+                                                        {% for tag in tagList %}
+                                                            {{ tag.description|markdown|raw }}
+                                                        {% endfor %}
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                        </table>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +176,7 @@
             <a id="{{ node.fullyQualifiedStructuralElementName }}"></a>
             <ul class="breadcrumb">
                 <li><a href="{{ path('index.html') }}"><i class="icon-custom icon-class"></i></a></li>
-                {{ self.buildBreadcrumb(node.namespace) }}
+                {{ macros.buildBreadcrumb(node.namespace) }}
                 <li class="active"><span class="divider">\</span><a href="{{ path(node) }}">{{ node.name }}</a></li>
             </ul>
         </div>
