--- a/index.html.twig
+++ b/index.html.twig
@@ -1,82 +1,72 @@
 {% extends 'layout.html.twig' %}
 
-{% import _self as index %}
+{% import 'base/macros.html.twig' as macros %}
 
-{% macro renderMarkerCounter(files) %}
-    {% set count = 0 %}
-    {% for file in files %}
-        {% set count = count + file.markers.count %}
-    {% endfor %}
-    <span class="label label-info">{{ count }}</span>
-{% endmacro %}
-
-{% macro renderErrorCounter(files) %}
-    {% set count = 0 %}
-    {% for file in files %}
-        {% set count = count + file.allerrors.count %}
-    {% endfor %}
-    <span class="label label-info">{{ count }}</span>
-{% endmacro %}
+{% block heroUnit %}
+    <div class="hero-unit">
+        <h1>{{ project.name|raw }}</h1>
+        <h2>Documentation</h2>
+    </div>
+{% endblock %}
 
 {% block content %}
-        <div class="hero-unit">
-            <h1>{{ project.name|raw }}</h1>
-            <h2>Documentation</h2>
-        </div>
-
-        <div class="row">
-            <div class="span7">
-                {% if project.namespace.namespaces.count > 0 or not project.index.packages %}
-                    <div class="well">
-                        <ul class="nav nav-list">
-                            <li class="nav-header">Namespaces</li>
+    <div class="row">
+        <div class="span7">
+            {% if project.namespace.namespaces.count > 0 or not project.index.packages %}
+                <div class="well">
+                    <ul class="nav nav-list">
+                        <li class="nav-header">Namespaces</li>
+                        {% block listRootNamespaces %}
                             <li><a href="{{ path(project.namespace) }}">Global ({{ project.namespace.name }})</a></li>
                             {% for namespace in project.namespace.children %}
                                 <li><a href="{{ path(namespace) }}">{{ namespace.name }}</a></li>
                             {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
-
-                {% if project.indexes.packages.count %}
-                    <div class="well">
-                        <ul class="nav nav-list">
-                            <li class="nav-header">Packages</li>
-                            <li><a href="{{ path(project.indexes.packages|first) }}">Global ({{ (project.indexes.packages|first).name }})</a></li>
-                            {% for package in (project.indexes.packages|first).children %}
-                            <li><a href="{{ path(package) }}">{{ package.name }}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                {% endif %}
-
-            </div>
-            <div class="span5">
-                <div class="well">
-                    <ul class="nav nav-list">
-                        <li class="nav-header">Charts</li>
-                        <li>
-                            <a href="{{ path('graph_class.html') }}">
-                                <i class="icon-list-alt"></i> Class inheritance diagram
-                            </a>
-                        </li>
+                        {% endblock %}
                     </ul>
                 </div>
+            {% endif %}
+
+            {% if project.indexes.packages.count %}
                 <div class="well">
                     <ul class="nav nav-list">
-                        <li class="nav-header">Reports</li>
+                        <li class="nav-header">Packages</li>
+                        {% block listRootPackages %}
+                            <li><a href="{{ path(project.indexes.packages|first) }}">Global ({{ (project.indexes.packages|first).name }})</a></li>
+                            {% for package in (project.indexes.packages|first).children %}
+                                <li><a href="{{ path(package) }}">{{ package.name }}</a></li>
+                            {% endfor %}
+                        {% endblock %}
+                    </ul>
+                </div>
+            {% endif %}
+
+        </div>
+        <div class="span5">
+            <div class="well">
+                <ul class="nav nav-list">
+                    <li class="nav-header">Charts</li>
+                    {% block listCharts %}
+                        <li><a href="{{ path('graph_class.html') }}"><i class="icon-list-alt"></i> Class inheritance diagram</a></li>
+                    {% endblock %}
+                </ul>
+            </div>
+            <div class="well">
+                <ul class="nav nav-list">
+                    <li class="nav-header">Reports</li>
+                    {% block listReports %}
                         <li>
                             <a href="{{ path('errors.html') }}">
-                                <i class="icon-list-alt"></i> Errors {{ index.renderErrorCounter(project.files) }}
+                                <i class="icon-list-alt"></i> Errors {{ macros.renderErrorCounter(project.files) }}
                             </a>
                         </li>
                         <li>
                             <a href="{{ path('markers.html') }}">
-                                <i class="icon-list-alt"></i> Markers {{ index.renderMarkerCounter(project.files) }}
+                                <i class="icon-list-alt"></i> Markers {{ macros.renderMarkerCounter(project.files) }}
                             </a>
                         </li>
-                    </ul>
-                </div>
+                    {% endblock %}
+                </ul>
             </div>
         </div>
+    </div>
 {% endblock %}
