Do not show deep link if there is none

--- a/namespace.html.twig
+++ b/namespace.html.twig
@@ -2,10 +2,10 @@
 
 {% macro elementSummary(element, type) %}
     <div id="{{ element.name }}" class="element ajax clickable {{ type }}">
-        <h1>{{ element.name }}<a href="{{ path(element) }}">¶</a></h1>
+        <h1>{{ element.name }}{% if path(element) %}<a href="{{ path(element) }}">¶</a>{% endif %}</h1>
         <p class="short_description">{{ element.summary }}</p>
         <div class="details collapse">{{ element.description }}</div>
-        <a href="{{ path(element) }}" class="more">« More »</a>
+        {% if path(element) %}<a href="{{ path(element) }}" class="more">« More »</a>{% endif %}
     </div>
 {% endmacro %}
 
