--- a/class.html.twig
+++ b/class.html.twig
@@ -51,7 +51,8 @@
                     </table>
 
                     <h3><i class="icon-custom icon-method"></i> Methods</h3>
-                    {% for method in node.methods.merge(node.inheritedMethods) %}
+                    {% set specialMethods = node.magicMethods ? node.inheritedMethods.merge(node.magicMethods) : node.inheritedMethods %}
+                    {% for method in node.methods.merge(specialMethods) %}
                         <a id="method_{{ method.name }}"></a>
                         <div class="element clickable method {{ method.visibility }} method_{{ method.name }}{{ method.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".method_{{ method.name }} .collapse">
                             <h2>{{ method.summary ?: method.name }}</h2>
@@ -137,9 +138,10 @@
                         {% endfor %}
                     {% endif %}
 
-                    {% if node.properties.merge(node.inheritedProperties).count > 0 %}
+                    {% set specialProperties = node.magicProperties ? node.inheritedProperties.merge(node.magicProperties) : node.inheritedProperties %}
+                    {% if node.properties.merge(specialProperties).count > 0 %}
                         <h3><i class="icon-custom icon-property"></i> Properties</h3>
-                        {% for property in node.properties.merge(node.inheritedProperties) %}
+                        {% for property in node.properties.merge(specialProperties) %}
                             <a id="property_{{ property.name }}"> </a>
                             <div class="element clickable property {{ property.visibility }} property_{{ property.name }}{{ property.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".property_{{ property.name }} .collapse">
                                 <h2>{{ property.summary ?: property.var.0.description ?: property.name }}</h2>
