--- a/layout.html.twig
+++ b/layout.html.twig
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     <meta charset="utf-8"/>
     <title>{% block title %}{{ project.name }}{% endblock %}</title>
     <meta name="author" content="{{ author }}"/>
     <meta name="description" content=""/>
+
+    {% block stylesheets %}
+        <link href="{{ path('css/template.css') }}" rel="stylesheet" media="all"/>
+    {% endblock %}
+
     {% block javascripts %}
         <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
@@ -16,10 +21,6 @@
         <script src="{{ path('js/bootstrap.js') }}" type="text/javascript"></script>
         <script src="{{ path('js/template.js') }}" type="text/javascript"></script>
         <script src="{{ path('js/prettify/prettify.min.js') }}" type="text/javascript"></script>
-    {% endblock %}
-
-    {% block stylesheets %}
-        <link href="{{ path('css/template.css') }}" rel="stylesheet" media="all"/>
     {% endblock %}
 
     {% block icons %}
