--- a/class.html.twig
+++ b/class.html.twig
@@ -36,7 +36,7 @@
                     </div>
                     <table class="table table-bordered">
                         {% for tagList in node.tags %}
-                            {% for tag in tagList %}
+                            {% for tag in tagList if tag.name not in ['method', 'property']%}
                                 <tr>
                                     <th>
                                         {{ tag.name }}
@@ -153,7 +153,7 @@
                             <a id="property_{{ property.name }}"> </a>
                             <div class="element clickable property {{ property.deprecated ? 'deprecated' }} {{ property.visibility }} property_{{ property.name }}{{ property.parent.name != node.name ? ' inherited' : '' }}" data-toggle="collapse" data-target=".property_{{ property.name }} .collapse">
                                 <h2>{{ property.summary ?: property.var.0.description ?: property.name }}</h2>
-                                <pre>{{ property.name }}</pre>
+                                <pre>{{ property.name }} : {{ property.types|join('|') }}</pre>
                                 <div class="labels">
                                     {% if property.parent.name != node.name %}<span class="label">inherited</span>{% endif %}
                                     {% if property.static %}<span class="label">static</span>{% endif %}
@@ -176,6 +176,11 @@
                                                 </tr>
                                             {% endfor %}
                                         </table>
+
+                                        {% if property.types and property.types|join() != 'void' %}
+                                            <h3>Type(s)</h3>
+                                            <code>{{ property.types|route|join('|')|raw }}</code>
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
