Replaced all .count instances for |length to prevent naming collisions

--- a/base/macros.html.twig
+++ b/base/macros.html.twig
@@ -1,7 +1,7 @@
 {% macro renderMarkerCounter(files) %}
     {% set count = 0 %}
     {% for file in files %}
-        {% set count = count + file.markers.count %}
+        {% set count = count + file.markers|length %}
     {% endfor %}
     <span class="label label-info">{{ count }}</span>
 {% endmacro %}
@@ -9,7 +9,7 @@
 {% macro renderErrorCounter(files) %}
     {% set count = 0 %}
     {% for file in files %}
-        {% set count = count + file.allerrors.count %}
+        {% set count = count + file.allerrors|length %}
     {% endfor %}
     <span class="label label-info">{{ count }}</span>
 {% endmacro %}
