--- a/class.html.twig
+++ b/class.html.twig
@@ -25,7 +25,7 @@
                     {% if node.parent %}
                         Extends {{ node.parent|route|join(', ')|raw }}
                     {% endif %}
-                    {% if node.interfaces.count %}
+                    {% if node.interfaces|length %}
                         Implements {{ node.interfaces|route|join(', ')|raw }}
                     {% endif %}
                 </small>
@@ -94,7 +94,7 @@
                                         {% endfor %}
                                     </table>
 
-                                    {% if method.arguments.count > 0 %}
+                                    {% if method.arguments|length > 0 %}
                                         <h3>Arguments</h3>
                                         {% for argument in method.arguments %}
                                             <div class="subelement argument">
@@ -113,7 +113,7 @@
                         </div>
                     {% endfor %}
 
-                    {% if node.constants.merge(node.inheritedConstants).count > 0 %}
+                    {% if node.constants.merge(node.inheritedConstants)|length > 0 %}
                         <h3><i class="icon-custom icon-constant"></i> Constants</h3>
                         {% for constant in node.constants.merge(node.inheritedConstants) %}
                             <a id="constant_{{ constant.name }}"> </a>
@@ -147,7 +147,7 @@
                     {% endif %}
 
                     {% set specialProperties = node.magicProperties ? node.inheritedProperties.merge(node.magicProperties) : node.inheritedProperties %}
-                    {% if node.properties.merge(specialProperties).count > 0 %}
+                    {% if node.properties.merge(specialProperties)|length > 0 %}
                         <h3><i class="icon-custom icon-property"></i> Properties</h3>
                         {% for property in node.properties.merge(specialProperties) %}
                             <a id="property_{{ property.name }}"> </a>
