--- a/index.html.twig
+++ b/index.html.twig
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="row">
         <div class="span7">
-            {% if project.namespace.namespaces.count > 0 or not project.index.packages %}
+            {% if project.namespace.namespaces|length > 0 or not project.index.packages %}
                 <div class="well">
                     <ul class="nav nav-list">
                         <li class="nav-header">Namespaces</li>
@@ -26,7 +26,7 @@
                 </div>
             {% endif %}
 
-            {% if project.indexes.packages.count %}
+            {% if project.indexes.packages|length > 0 %}
                 <div class="well">
                     <ul class="nav nav-list">
                         <li class="nav-header">Packages</li>
