--- a/layout.html.twig
+++ b/layout.html.twig
@@ -48,13 +48,13 @@
                                 API Documentation <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                {% if (project.namespace.children.count > 0) %}
+                                {% if (project.namespace.children|length > 0) %}
                                     <li><a>Namespaces</a></li>
                                     {% for namespace in project.namespace.children %}
                                     <li><a href="{{ path(namespace) }}">{{ namespace.name }}</a></li>
                                     {% endfor %}
                                 {% endif %}
-                                {% if (project.index.packages.count) %}
+                                {% if (project.index.packages|length > 0) %}
                                     <li><a>Packages</a></li>
                                 {% endif %}
                             </ul>
