--- a/reports/markers.html.twig
+++ b/reports/markers.html.twig
@@ -11,10 +11,10 @@
                 <li class="nav-header">Navigation</li>
                 {% set markerCount = 0 %}
                 {% for file in project.files %}
-                    {% if file.markers.count > 0 %}
+                    {% if file.markers|length > 0 %}
                     <li><a href="#{{ file.path }}"><i class="icon-file"></i> {{ file.path }}</a></li>
                     {% endif %}
-                    {% set markerCount = markerCount + file.markers.count %}
+                    {% set markerCount = markerCount + file.markers|length %}
                 {% endfor %}
             </ul>
         </div>
@@ -32,13 +32,13 @@
 
             <div id="marker-accordion">
                 {% for file in project.files %}
-                    {% if file.markers.count > 0 %}
+                    {% if file.markers|length > 0 %}
                         <div class="package-contents">
                             <a name="{{ file.path }}" id="{{ file.path }}"></a>
                             <h3>
                             <i class="icon-file"></i>
                                 {{ file.path }}
-                                <small style="float: right;padding-right: 10px;">{{ file.markers.count }}</small>
+                                <small style="float: right;padding-right: 10px;">{{ file.markers|length }}</small>
                             </h3>
                             <div>
                                 <table class="table markers table-bordered">
