--- a/reports/deprecated.html.twig
+++ b/reports/deprecated.html.twig
@@ -18,7 +18,7 @@
 
         <div class="span8">
             <ul class="breadcrumb">
-                <li><a href="{{ path('/') }}"><i class="icon-stop"></i></a><span class="divider">\</span></li>
+                <li><a href="{% if path('/') == '' %}?{% else %}{{ path('/') }}{% endif %}"><i class="icon-stop"></i></a><span class="divider">\</span></li>
                 <li>Deprecated elements</li>
             </ul>
 
