--- a/index.html.twig
+++ b/index.html.twig
@@ -61,7 +61,7 @@
                         </li>
                         <li>
                             <a href="{{ path('deprecated.html') }}">
-                                <i class="icon-list-alt"></i> Deprecated {{ macros.renderDeprecatedCounter(project.files) }}
+                                <i class="icon-list-alt"></i> Deprecated {{ macros.renderDeprecatedCounter(project.indexes.elements) }}
                             </a>
                         </li>
                         <li>
