Use Bootstrap markup for error count

--- a/reports/errors.html.twig
+++ b/reports/errors.html.twig
@@ -45,7 +45,7 @@
                         <h3>
                             <i class="icon-file"></i>
                             {{ file.path }}
-                            <small style="float: right;padding-right: 10px;">{{ file.allerrors|length }}</small>
+                            <span class="pull-right badge badge-info">{{ file.allerrors|length }}</span>
                         </h3>
                         <div>
                             <table class="table markers table-bordered">
