Use Bootstrap markup for marker count

--- a/reports/markers.html.twig
+++ b/reports/markers.html.twig
@@ -38,7 +38,7 @@
                             <h3>
                             <i class="icon-file"></i>
                                 {{ file.path }}
-                                <small style="float: right;padding-right: 10px;">{{ file.markers|length }}</small>
+                                <span class="pull-right badge badge-info">{{ file.markers|length }}</span>
                             </h3>
                             <div>
                                 <table class="table markers table-bordered">
