changed path to static stylesheet

--- a/layout.html.twig
+++ b/layout.html.twig
@@ -9,7 +9,7 @@
 
     {% block stylesheets %}
         <link href="{{ path('css/template.css') }}" rel="stylesheet" media="all"/>
-        <link rel="stylesheet" href="{{ path('css/jqplot/jquery.jqplot.min.css') }}">
+        <link rel="stylesheet" href="{{ path('js/jqplot/jquery.jqplot.min.css') }}">
     {% endblock %}
 
     {% block javascripts %}
